--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "template",
-    "version": "0.0.1",
-    "description": "Template for nodejs app with fastify",
+    "name": "git-connector",
+    "version": "0.1.1",
+    "description": "Git folder or file synchronization",
     "scripts": {
         "up": "ncu --configFilePath ./_common --configFileName ncu_up_config.json && rimraf ./package-lock.json && npm i && ncu --configFilePath ./_common --configFileName ncu_config.json",
         "ncu": "ncu --configFilePath ./_common --configFileName ncu_config.json",
@@ -16,19 +16,19 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/samurayii/fastify-app-starter.git"
+        "url": "git+https://github.com/inf-startup-kit/git-connector.git"
     },
     "keywords": [
-        "typescript",
-        "fastify",
-        "template"
+        "git",
+        "synchronization",
+        "administration"
     ],
     "author": "Nuzhnov A.A.",
     "license": "GNU GPLv3",
     "bugs": {
-        "url": "https://github.com/samurayii/fastify-app-starter/issues"
+        "url": "https://github.com/inf-startup-kit/git-connector/issues"
     },
-    "homepage": "https://github.com/samurayii/fastify-app-starter.git#readme",
+    "homepage": "https://github.com/inf-startup-kit/git-connector.git#readme",
     "optionalDependencies": {
         "@typescript-eslint/eslint-plugin": "^5.31.0",
         "@typescript-eslint/parser": "^5.31.0",
@@ -38,13 +38,15 @@
     },
     "devDependencies": {
         "@types/chai": "^4.3.1",
+        "@types/clone": "^2.1.1",
+        "@types/cron": "^2.0.0",
         "@types/mocha": "^9.1.1",
         "@types/node": "^18.6.2",
+        "@types/rimraf": "^3.0.2",
         "@types/superagent": "^4.1.15",
         "chai": "^4.3.6",
         "files-copier": "^0.1.1",
         "json-key-remover": "^0.1.4",
-        "rimraf": "^3.0.2",
         "superagent": "^8.0.0",
         "ts-mocha": "^10.0.0",
         "typescript": "^4.7.4"
@@ -64,9 +66,12 @@
         "ajv": "^8.11.0",
         "chalk": "=4.1.2",
         "commander": "^9.4.0",
+        "cron": "^2.1.0",
         "fastify": "^4.3.0",
         "json-from-default-schema": "^1.0.1",
         "jtomler": "^1.0.1",
-        "logger-event-emitter": "^0.2.3"
+        "logger-event-emitter": "^0.2.3",
+        "md5-file": "^5.0.0",
+        "rimraf": "^3.0.2"
     }
 }
